--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,24 @@
 
 
 
+html,
+body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
 
+.canvas-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+}
 
 .fire-effect-150 {
   animation: burn 1s infinite alternate;
